insert image post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,6 +28,7 @@ layout: default
   </time>
 
       <div class="measure lh-copy">
+        <img src="/assets/img/photo/{{ page.image }}" alt="foto del post" class="pt2">
         {{ content }}
       </div>
 </article>
