--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,18 +17,18 @@ layout: default
     {% endif %}
 
     {% if page.previous.url %}
-    <a class="" href="{{page.previous.url}}">lexi prima</a>
+    <a class="" href="{{page.previous.url}}">lèzi queo prima</a>
     {% endif %}
 
 
     {% if page.next.url %}
      opùr
-    <a class="" href="{{page.next.url}}">lexi dopo</a>
+    <a class="" href="{{page.next.url}}">lèzi queo dopo</a>
     {% endif %}
   </time>
 
       <div class="measure lh-copy">
-        <img src="{{ page.image }}" alt="foto del post" class="pt2">
+        <img src="{{ page.image }}" alt="foto del post" class="w-100 pt2">
         {{ content }}
       </div>
 </article>
