--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
   </p>
   <div class="bb b--light-gray pv3 ttu">
     <a href="/about" title="Cossa xé" class="f6 dib pr2">Cossa xé</a>
-    <a href="/liston/" title="Liston" class="f6 dib pr2">Liston</a>
+    <a href="/liston" title="Liston" class="f6 dib pr2">Liston</a>
 
   </div>
 
