--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,8 +3,8 @@
   <a href="mailto:luca@lucacorsato.com" class="b f3">luca@lucacorsato.com</a>
   <p class="f6 db b ttu lh-solid">© 2020 Poenta Valei</p>
   <div class="mt3">
-    <a href="/language/" title="Cossa xé" class="f6 dib pr2">Cossa xé</a>
-    <a href="/terms/"    title="Terms" class="f6 dib ph2">Terms of Use</a>
+    <a href="/about" title="Cossa xé" class="f6 dib pr2">Cossa xé</a>
+    <a href="/liston"    title="Terms" class="f6 dib ph2">Liston</a>
     <a href="/privacy/"  title="Privacy" class="f6 dib pl2">Privacy</a>
   </div>
   <div class="pv3 ttu">
