--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -12,6 +12,7 @@ layout: default
   </time>
 
   <div class="measure lh-copy">
+    <img src="{{ page.image }}" alt="foto del post" class="w-100 pt2">
     {{ content }}
   </div>
 </article>
