fix theme new post

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,7 @@
   </div>
   <p class="f4-ns f5 i">
     {{ site.description }}
+    <br>Par no farse ciavar e no butar i schei in putanae :-D
   </p>
   <div class="bb b--light-gray pv3 ttu">
     <a href="/about" title="Cossa xé" class="f6 dib pr2">Cossa xé</a>
