--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,8 @@ layout: compress
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "" }}" dir="ltr">
   {%- include head.html -%}
-  <body class="pa2 f4">
-    
+  <body class="pa3 pa5-ns f4">
+
     {{ content }}
     {%- include footer.html -%}
   </body>
